--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -60,10 +60,12 @@
                 <form action="create.php" method="POST">
                     <input type="text" class="input" placeholder="Write your title here......">
                     <div class="blog-img">
-                        <img src="../images/img-upload.svg" alt="Image-upload" id="output">
-                        <input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)"style="display: none; width: 100vh;">
-                        <label for="file" id="output-label">Upload Image</label>
-                    </div>
+                        <label for="file" id="output-label">
+                            <img src="../images/img-upload.svg" alt="Image-upload" id="output">
+                            <span></span>
+                        </label>
+                        <input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)" style="display: none; width: 100vh;">
+                    </div>                  
                     <textarea name="content" id="content" class="input"
                         placeholder="Write your content here......"></textarea>
                     <button type="submit" class="btn">PUBLISH</button>
@@ -84,5 +86,4 @@
         };
     </script>
 </body>
-
 </html>
