feat: profile page, logout

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -42,9 +42,17 @@
                     </div>
                     <div class="icons bottom-icons">
                         <li class="nav-buttons">
-                            <a href="create.html" class="selected">
+                            <a href="create.html">
                                 <i class="fa-solid fa-plus fa-xl"></i>
                                 <p>Create</p>
+                            </a>
+                        </li>
+                    </div>
+                    <div class="icons">
+                        <li class="nav-buttons">
+                            <a href="profile.html" class="selected">
+                                <i class="fa-solid fa-user fa-xl"></i>
+                                <p>Profile</p>
                             </a>
                         </li>
                     </div>
@@ -54,22 +62,14 @@
         <div class="main">
             <div class="page-title">
                 <div class="line"></div>
-                <h1>Beetroot1603</h1>
+                <div class="header">
+                    <h1>Beetroot1603</h1>
+                    <button class="btn"><i class="fa-solid fa-right-from-bracket"></i> Log-Out</button>
+                </div>
             </div>
             <div class="details">
-                <div class="aboutme">
-                    <h1>About Me</h1>
-                    <h3>An open-source Twitter bot that lets you easily set reminders for public tweets.
-                        Mention
-                        "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English
-                        when you would like to reminded of that tweet.
-                        You could say things like in 2 days or in 12 hours or next week or even in 5 years.
-                        Check out the source on Github.
-                        An open-source Twitter bot that lets you easily set reminders for public tweets.
-                        Mention</h3>
-                </div>
                 <div class="myblogs">
-                    <h1>My Blogs</h1>
+                    <h1>Blogs by Vishrut Deshmukh</h1>
                     <div class="blog-wrapper">
                         <div class="left-div">
                             <div class="date">
@@ -91,9 +91,11 @@
                                     <p class="description">
                                         An open-source Twitter bot that lets you easily set reminders for public tweets.
                                         Mention
-                                        "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English
+                                        "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural
+                                        English
                                         when you would like to reminded of that tweet.
-                                        You could say things like in 2 days or in 12 hours or next week or even in 5 years.
+                                        You could say things like in 2 days or in 12 hours or next week or even in 5
+                                        years.
                                         Check out the source on Github.
                                         An open-source Twitter bot that lets you easily set reminders for public tweets.
                                         Mention
